# rumtk

./: .gitignore  README.md
.github/: FUNDING.yml
.github/workflows/: check.yml
articles/parser/optimizations/: intro.md  methods.md  results1.md  results2.md
articles/parser/optimizations/reports/: 05042026_release_large.mhtml  05042026_release_small.mhtml  05082026_large_skipped_serialization.mhtml  05092026_release_large.mhtml  05122026_release_large.mhtml  05132026_release_large.mhtml  05132026_release_large_2.mhtml  05142026_release_large.mhtml  06092026_release_large.mhtml  06102026_release_large.mhtml  06112026_release_large.mhtml  06162026_release_large.mhtml  06182026_release_large.mhtml  06222026_release_large.mhtml  06222026_release_large_after_field_from_opt.mhtml  06232026_release_large_generate_subfields_optimization.mhtml  06232026_release_large_lazy_field.mhtml
demo/: app.json
examples/: benchmark.sh  echo_interface.sh  stdin_interface.sh
examples/benchmark/: benchmark.sh
examples/benchmark/parse/: setup.sh
examples/benchmark/parser/: benchmark.sh  cleanup.sh  setup.sh
examples/hl7/: path_report_enterprisehealth_pdf_template.hl7
examples/parsed/: sample_full_hl7.json
toolkit/rumtk-arena/: Cargo.toml  README.md
toolkit/rumtk-arena/src/: arena.rs  collections.rs  dune.rs  lib.rs
toolkit/rumtk-benchmark/: Cargo.toml  README.md
toolkit/rumtk-benchmark/src/: main.rs
toolkit/rumtk-benchmark/src/api/: mod.rs
toolkit/rumtk-benchmark/src/api/benchmarks/: basic.rs  mod.rs  stack.rs  utils.rs
toolkit/rumtk-benchmark/src/components/: benchmark_view.rs  mod.rs
toolkit/rumtk-benchmark/src/forms/: basic_benchmark.rs  mod.rs  upload.rs
toolkit/rumtk-benchmark/src/pages/: index.rs  other.rs
toolkit/rumtk-benchmark/src/utils/: mod.rs  types.rs
toolkit/rumtk-benchmark/src/utils/types/: basic_report.rs  cpu_report.rs  flamegraph.rs  meta.rs  mod.rs
toolkit/rumtk-core/: Cargo.toml  README.md
toolkit/rumtk-core/src/: base.rs  buffers.rs  cache.rs  cli.rs  core.rs  cpu.rs  dependencies.rs  hash.rs  id.rs  instrumentation.rs  json.rs  lib.rs  log.rs  maths.rs  net.rs  pipelines.rs  queue.rs  scripting.rs  search.rs  serde.rs  strings.rs  threading.rs  types.rs
toolkit/rumtk-core/src/serde/: json.rs  mod.rs
toolkit/rumtk-hl7-v2/: Cargo.toml  README.md
toolkit/rumtk-hl7-v2/src/: hl7_v2_base_types.rs  hl7_v2_complex_types.rs  hl7_v2_constants.rs  hl7_v2_datasets.rs  hl7_v2_field_descriptors.rs  hl7_v2_mllp.rs  hl7_v2_optionality_rules.rs  hl7_v2_parser.rs  hl7_v2_python_types.rs  hl7_v2_scripting.rs  hl7_v2_search.rs  hl7_v2_types.rs  lib.rs  testdata.rs
toolkit/rumtk-v2-interface/: Cargo.toml  README.md
toolkit/rumtk-v2-interface/src/: main.rs
toolkit/rumtk-v2-parse/: Cargo.toml  README.md
toolkit/rumtk-v2-parse/src/: main.rs
toolkit/rumtk-web/: 1001PublicDomainLicense  Cargo.toml  README.md
toolkit/rumtk-web-benchmark/: Cargo.toml
toolkit/rumtk-web-benchmark/src/: main.rs
toolkit/rumtk-web-benchmark/src/pages/: index.rs  mod.rs
toolkit/rumtk-web-hello/: Cargo.toml
toolkit/rumtk-web-hello/src/: main.rs
toolkit/rumtk-web/src/: lib.rs
toolkit/rumtk-web/src/api/: mod.rs
toolkit/rumtk-web/src/components/: app_body.rs  app_head.rs  app_shell.rs  contact_button.rs  contact_card.rs  container.rs  content_viewer.rs  div.rs  footer.rs  formatted_label.rs  header.rs  info_card.rs  item_card.rs  job_loader.rs  label.rs  list.rs  loader.rs  logo.rs  main.rs  mod.rs  navbar.rs  navlink.rs  portrait_card.rs  script.rs  select.rs  socials.rs  spacer.rs  text_card.rs  title.rs
toolkit/rumtk-web/src/components/Form/: form.rs  form_element.rs  form_utils.rs  formatted_label.rs  label.rs  mod.rs  props.rs  text_card.rs
toolkit/rumtk-web/src/components/form/: form.rs  form_element.rs  form_utils.rs  input_element.rs  mod.rs  props.rs  select_element.rs
toolkit/rumtk-web/src/css/: animations.rs  basic.rs  components.rs  default.rs  fonts.rs  forms.rs  gap.rs  imgs.rs  index.rs  layout.rs  media.rs  mod.rs  theme.rs
toolkit/rumtk-web/src/form_data/: mod.rs
toolkit/rumtk-web/src/js/: cache_file.rs  mod.rs
toolkit/rumtk-web/src/pages/: index.rs  mod.rs
toolkit/rumtk-web/src/static_components/: css.rs  fontawesome.rs  htmx.rs  meta.rs  mod.rs
toolkit/rumtk-web/src/utils/: app.rs  conf.rs  conversions.rs  defaults.rs  form_data.rs  jobs.rs  matcher.rs  mod.rs  packaging.rs  render.rs  response.rs  testdata.rs  types.rs
toolkit/rumtk-web/static/: app.css
