[package]
name = "rumtk-arena"
description = "Arena/Bump allocator library to support performance critical portions of the rumtk framework."
version = "0.2.1"
license = "LGPL-3.0"
homepage = "https://github.com/luissantosHCIT/rumtk/tree/main/toolkit/rumtk-arena"
documentation = "https://docs.rs/rumtk-arena"
readme = "README.md"
repository = "https://github.com/luissantosHCIT/rumtk"
keywords = ["rumtk", "healthcare", "allocators", "arena", "bump"]
categories = ["parsing", "science", "parser-implementations"]
edition = "2021"
rust-version = "1.81.0"

[dependencies]
memmap2 = "0.9.10"
