[package]
name = "rumtk-benchmark"
description = "Benchmark tool to generate a report of performance characteristics. Built for the RUMTK toolkit, but not limited to it."
version = "0.2.0"
license = "LGPL-3.0"
homepage = "https://github.com/luissantosHCIT/rumtk/tree/main/toolkit/rumtk-benchmark"
documentation = "https://docs.rs/rumtk-benchmark"
readme = "README.md"
repository = "https://github.com/luissantosHCIT/rumtk"
keywords = ["rumtk", "healthcare", "hl7", "v2", "optimizations"]
categories = ["parsing", "science", "parser-implementations"]
edition = "2021"
rust-version = "1.81.0"

[profile.dev]
debug = true
strip = false

[dependencies]
rumtk-core = { version = "0.16.1", path = "../rumtk-core" }
rumtk-web = { version = "0.7.5", path = "../rumtk-web" }
askama = "0.15.6"
serde = { version = "1.0.228", features = ["derive", "std"] }
serde_json = "1.0.149"
pulldown-cmark = "0.13.3"
tempfile = "3.27.0"
