[package]
name = "rumtk-core"
description = "Core library for providing general functionality to support the other RUMTK crates. See rumtk-hl7-v2 crate as example"
version = "0.16.0"
license = "LGPL-3.0"
homepage = "https://github.com/luissantosHCIT/rumtk/tree/main/toolkit/rumtk-core"
documentation = "https://docs.rs/rumtk-core"
readme = "README.md"
repository = "https://github.com/luissantosHCIT/rumtk"
keywords = ["rumtk", "healthcare", "hl7", "v2", "core"]
categories = ["parsing", "science", "parser-implementations"]
edition = "2021"
rust-version = "1.81.0"

[profile.dev]
debug = true
strip = false

[dependencies]
unicode-segmentation = "1.13.2"
encoding_rs = "0.8.35"
chardetng = "1.0.0"
ahash = { version = "0.8.12", features = ["serde"] }
indexmap = { version = "2.13.0", features = ["std", "serde"] }
regex = "1.12.2"
once_cell = "1.20.2"
tokio = { version = "1.43.0", features = ["full"] }
num_cpus = "1.16.0"
serde = { version = "1.0.228", features = ["derive", "std"] }
serde_json = "1.0.149"
clap = { version = "4.5.38", features = ["derive"] }
pyo3 = { version = "0.28.3", features = ["default", "auto-initialize", "serde"] }
uuid = { version = "1.19.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
pyo3-ffi = "0.28.3"
bytes = "1.11.0"
nanoid = "0.4.0"
rand = "0.10.1"
base64 = "0.22.1"
bumpalo = { version = "3.20.3", features = ["collections", "boxed", "serde", "allocator_api"] }
