[package]
name = "rumtk-hl7-v2"
description = "HL7 V2 Parser and MLLP Implementation to support building interface utilities."
version = "0.8.8"
readme = "README.md"
license = "LGPL-2.1"
homepage = "https://github.com/luissantosHCIT/rumtk/tree/main/toolkit/rumtk-hl7-v2"
documentation = "https://docs.rs/rumtk-hl7-v2"
repository = "https://github.com/luissantosHCIT/rumtk"
keywords = ["rumtk", "healthcare", "hl7", "v2"]
categories = ["parsing", "science", "parser-implementations"]
edition = "2021"
rust-version = "1.81.0"

[dependencies]
phf = "0.13.1"
phf_macros = "0.13.1"
chrono = "0.4.39"
once_cell = "1.20.2"
serde = { version = "1.0.228", features = ["derive", "std"] }
tokio = { version = "1.45.0", features = ["full"] }
pyo3 = { version = "0.27.1", features = ["default", "auto-initialize", "serde"] }
rumtk-core = { version = "0.9.14", path = "../rumtk-core" }
