[package]
name = "rumtk-v2-interface"
description = "HL7 V2 Interface utility based on the RUMTK framework."
version = "0.2.8"
readme = "README.md"
license = "GPL-3.0-or-later"
homepage = "https://github.com/kiseitai3/rumtk/tree/main/toolkit/rumtk-v2-interface"
documentation = "https://docs.rs/rumtk-v2-interface"
repository = "https://github.com/kiseitai3/rumtk"
keywords = ["rumtk", "healthcare", "hl7", "v2", "interface"]
categories = ["parsing", "science", "parser-implementations"]
edition = "2021"
rust-version = "1.81.0"

[dependencies]
rumtk-core = { version = "0.9.13", path = "../rumtk-core" }
rumtk-hl7-v2 = { version = "0.8.6", path = "../rumtk-hl7-v2" }
serde = { version = "1.0.219", features = ["derive", "std"] }
serde_json = "1.0.140"
clap = { version = "4.5.38", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
