[package]
name = "rumtk-v2-interface"
description = "HL7 V2 Interface utility based on the RUMTK framework."
version = "0.2.10"
readme = "README.md"
license = "GPL-3.0-or-later"
homepage = "https://github.com/kiseitai3/rumtk/tree/main/toolkit/rumtk-v2-interface"
documentation = "https://docs.rs/rumtk-v2-interface"
repository = "https://github.com/kiseitai3/rumtk"
keywords = ["rumtk", "healthcare", "hl7", "v2", "interface"]
categories = ["parsing", "science", "parser-implementations"]
edition = "2021"
rust-version = "1.81.0"

[dependencies]
rumtk-core = { version = "0.9.14", path = "../rumtk-core" }
rumtk-hl7-v2 = { version = "0.8.8", path = "../rumtk-hl7-v2" }
