[package]
name = "rumtk-hl7-v2-parse"
version = "0.1.0"
edition = "2024"

[dependencies]
#rumtk-core = { path = "../rumtk-core" }
#rumtk-hl7-v2 = { path = "../rumtk-hl7-v2" }
rumtk-core = "0.9.6"
rumtk-hl7-v2 = "0.8.4"
serde = { version = "1.0.219", features = ["derive", "std"] }
serde_json = "1.0.140"
clap = { version = "4.5.38", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
