[package]
name = "rumtk-hl7-v2-parse"
description = "HL7 V2 Parser utility based on the RUMTK framework."
version = "0.1.2"
readme = "README.md"
license = "GPL-3.0-or-later"
homepage = "https://github.com/kiseitai3/rumtk/tree/main/toolkit/rumtk-v2-parse"
documentation = "https://docs.rs/rumtk-v2-parse"
repository = "https://github.com/kiseitai3/rumtk"
keywords = ["rumtk", "healthcare", "hl7", "v2", "parser"]
categories = ["parsing", "science", "parser-implementations"]
edition = "2021"
rust-version = "1.81.0"

[dependencies]
rumtk-core = { version = "0.10.1", path = "../rumtk-core" }
rumtk-hl7-v2 = { version = "0.8.10", path = "../rumtk-hl7-v2" }
clap = { version = "4.5.38", features = ["derive"] }
