[package]
name = "rumtk-web"
description = "Web framework part of the RUMTK framework that attempts to simplify and expedite dashboard development in Healthcare."
version = "0.1.0"
readme = "README.md"
license = "LGPL-2.1"
homepage = "https://github.com/luissantosHCIT/rumtk/tree/main/toolkit/rumtk-web"
documentation = "https://docs.rs/rumtk-web"
repository = "https://github.com/luissantosHCIT/rumtk"
keywords = ["rumtk", "healthcare", "web", "framework"]
categories = ["parsing", "science", "web-programming", "template-engine"]
edition = "2021"
rust-version = "1.79.0"

[dependencies]
#rumtk-core = { path = "../rumtk-core" }
rumtk-core = "0.9.7"
askama = "0.14.0"
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.7", features = ["fs", "compression-full", "cors"] }
tracing = "0.1.41"
phf = "0.13.1"
phf_macros = "0.13.1"
clap = { version = "4.5.38", features = ["derive"] }
pulldown-cmark = "0.13.0"
serde = { version = "1.0.228", features = ["derive", "std"] }
serde_json = "1.0.145"
chrono = "0.4.39"
minifier = "0.3.6"
