[package]
name = "rumtk-web"
description = "Web framework part of the RUMTK framework that attempts to simplify and expedite dashboard development in Healthcare."
version = "0.4.9"
readme = "README.md"
license = "LGPL-2.1"
homepage = "https://github.com/luissantosHCIT/rumtk/tree/main/toolkit/rumtk-web"
documentation = "https://docs.rs/rumtk-web"
repository = "https://github.com/luissantosHCIT/rumtk"
keywords = ["rumtk", "healthcare", "web", "framework"]
categories = ["parsing", "science", "web-programming", "template-engine"]
edition = "2021"
rust-version = "1.81.0"

[dependencies]
rumtk-core = { version = "0.10.4", path = "../rumtk-core" }
askama = "0.15.1"
axum = { version = "0.8.8", features = ["multipart"] }
tower-http = { version = "0.6.7", features = ["fs", "compression-full", "cors"] }
tracing = "0.1.41"
phf = "0.13.1"
phf_macros = "0.13.1"
pulldown-cmark = "0.13.0"
serde = { version = "1.0.228", features = ["derive", "std"] }
minifier = { version = "0.3.6", features = ["html"] }
