[package]
name = "rumtk-web"
description = "Web framework part of the RUMTK framework that attempts to simplify and expedite dashboard development in Healthcare."
version = "0.7.4"
readme = "README.md"
license = "LGPL-3.0"
homepage = "https://github.com/luissantosHCIT/rumtk/tree/main/toolkit/rumtk-web"
documentation = "https://docs.rs/rumtk-web"
repository = "https://github.com/luissantosHCIT/rumtk"
keywords = ["rumtk", "healthcare", "web", "framework"]
categories = ["parsing", "science", "web-programming", "template-engine"]
edition = "2021"
rust-version = "1.81.0"

[profile.dev]
debug = true
strip = false

[dependencies]
rumtk-core = { version = "0.15.0", path = "../rumtk-core" }
askama = "0.15.6"
axum = { version = "0.8.9", features = ["multipart"] }
tower-http = { version = "0.6.7", features = ["fs", "compression-full", "cors"] }
tracing = "0.1.41"
phf = "0.13.1"
phf_macros = "0.13.1"
pulldown-cmark = "0.13.3"
minifier = { version = "0.3.6", features = ["html"] }
serde = { version = "1.0.228", features = ["derive", "std"] }
serde_json = "1.0.149"
